--- a/index.html
+++ b/index.html
@@ -9,7 +9,45 @@
 </head>
 <body>
 
-  
+  <div class="container">
+
+    <div class="newsletter-card">
+
+      <div class="home-page">
+        <div class="info-container">
+          <h1 class="title">Stay updated!</h1>
+          <p class="description">Join 60,000+ product managers receiving monthly updates on:</p>
+          <ul class="list-items"> 
+            <li class="list-item"><img src="/assets/images/icon-list.svg" alt="list-icon"> Product discovery and building what matters</li>
+            <li class="list-item"><img src="/assets/images/icon-list.svg" alt="list-icon"> Measuring to ensure updates are a success</li>
+            <li class="list-item"><img src="/assets/images/icon-list.svg" alt="list-icon"> And much more!</li>
+          </ul>
+
+          <form action="">
+            <label for="email-input"></label>
+            <input type="email" id="email-input" class="input-email" required placeholder="email@company.com">
+
+            <button>Subscribe to monthly newsletter</button>
+          </form>
+        </div>
+
+        <div class="image-container">
+          <img src="./assets/images/illustration-sign-up-desktop.svg" alt="illustration-sign-up-desktop">
+        </div>
+      </div>
+
+      <div class="submitted-success">
+        <img src="./assets/images/icon-success.svg" alt="">
+        <h1 class="title">Thanks for subscribing!</h1>
+        <p class="description">A confirmation email has been sent to <b>ash@loremcompany.com.</b> 
+          Please open it and click the button inside to confirm your subscription.
+        </p>
+        <button class="btn">Dismiss message</button>
+      </div>
+      
+    </div>
+
+  </div>
 
 
 <!-- 
@@ -41,7 +79,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Stefan Jovanovic</a>.
   </div>
 </body>
 </html>
