--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <div class="submitted-success">
+      <div class="submitted-success hide">
         <img src="./assets/images/icon-success.svg" alt="">
         <h1 class="title">Thanks for subscribing!</h1>
         <p class="description">A confirmation email has been sent to <b>ash@loremcompany.com.</b> 
