--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
             <li class="list-item"><img src="/assets/images/icon-list.svg" alt="list-icon"> And much more!</li>
           </ul>
 
-          <form action="">
-            <label for="email-input"></label>
-            <input type="email" id="email-input" class="input-email" required placeholder="email@company.com">
+          <form action="" class="form">
+            <div class="email-container"> 
+              <label for="email-input">Email address</label>
+              <input type="email" id="email-input" class="input-email" required placeholder="email@company.com">
+            </div>
 
-            <button>Subscribe to monthly newsletter</button>
+
+            <button class="btn formBtn">Subscribe to monthly newsletter</button>
           </form>
         </div>
 
