added the email changing in success mess, and the dismiss button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <img src="./assets/images/icon-success.svg" alt="">
           <h1 class="title">Thanks for subscribing!</h1>
         </div>
-        <p class="description">A confirmation email has been sent to <b class="boldded">ash@loremcompany.com.</b> 
+        <p class="description">A confirmation email has been sent to <span id="bolded">ash@loremcompany.com.</span> 
           Please open it and click the button inside to confirm your subscription.
         </p>
         <button class="btn dismissBtn" id="dismissBtn">Dismiss message</button>
