added all the functionality now moving to responsiveness

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <label for="email-input">Email address</label>
                 <p id="message" class="error-message hide"></p>
               </div>
-              <input type="email" id="email-input" class="input-email" required placeholder="email@company.com">
+              <input type="text" id="email-input" class="input-email " placeholder="email@company.com">
             </div>
             <button type="submit" class="btn formBtn" id="submitBtn">Subscribe to monthly newsletter</button>
           </form>
