made the app responsive to all screen sizes

--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
       </div>
 
       <div class="submitted-success hide" id="submitted-success">
-        <div class="top-container">
-          <img src="./assets/images/icon-success.svg" alt="">
-          <h1 class="title">Thanks for subscribing!</h1>
+          <div class="successContainer">
+            <div class="top-container">
+            <img src="./assets/images/icon-success.svg" alt="">
+            <h1 class="title">Thanks for subscribing!</h1>
+          </div>
+          <p class="description">A confirmation email has been sent to <span id="bolded">ash@loremcompany.com.</span> 
+            Please open it and click the button inside to confirm your subscription.
+          </p>
         </div>
-        <p class="description">A confirmation email has been sent to <span id="bolded">ash@loremcompany.com.</span> 
-          Please open it and click the button inside to confirm your subscription.
-        </p>
+        
         <button class="btn dismissBtn" id="dismissBtn">Dismiss message</button>
       </div>
 
